--- a/clientBlogs/src/index.css
+++ b/clientBlogs/src/index.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Questrial&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   padding-top: 0;
   box-sizing: border-box;
+}
+
+a :hover {
+  cursor: pointer;
 }
 
 
