--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -91,7 +91,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 40vh;
+    /* height: 40vh; */
 }
 
 .ch {
@@ -160,7 +160,9 @@
     height: 62px;
     padding: 20px 211px 0px 35px;
     margin-left: 35px;
-
+}
+.item:hover{
+    cursor: pointer;
 }
 
 .addline {
@@ -878,7 +880,6 @@ height: 28px;
     font-weight: 600;
     line-height: normal;
     letter-spacing: 1px;
-
 }
 
 .pink {
