--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -75,9 +75,10 @@
 }
 
 .box1 {
+    padding: 190px 107.52px 205.56px 107.55px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 500px;
     width: 50%;
     align-items: center;
     justify-content: center;
@@ -201,7 +202,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 40px;
+    /* margin-top: 40px; */
     /* height: 40vh; */
     /* transform: translateY(50px); */
     /* text-align: center; */
