--- a/clientBlogs/src/components/css/CommentCard.css
+++ b/clientBlogs/src/components/css/CommentCard.css
@@ -23,7 +23,7 @@
 .commentCard .userDetail {
     display: flex;
     justify-content: space-between;
-    align-items: end;
+    align-items: flex-end;
     height: 31px;
 
 }
@@ -96,12 +96,12 @@
     width: 120px;
     display: flex;
     justify-content: space-around;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .commentCard .replyBtnContainer .reply {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .commentCard .replyBtnContainer .icon {
@@ -241,10 +241,12 @@
     .commentCard .buttonArea {
         padding-top: 10px;
     }
+
     .typeBox #textBox {
-width:60%;
+        width: 60%;
     }
+
     .typeBox #respondBtn {
-        margin-top:20px;
+        margin-top: 20px;
     }
 }
