--- a/clientBlogs/src/pages/css/Setting.css
+++ b/clientBlogs/src/pages/css/Setting.css
@@ -310,7 +310,7 @@
 .section3 .container {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .section3 .container .save {
