--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -75,10 +75,10 @@
 }
 
 .box1 {
-    padding: 190px 107.52px 205.56px 107.55px;
+    padding: 100px 70.52px 155.56px 70.55px;
     display: flex;
     flex-direction: column;
-    gap: 500px;
+    gap: 200px;
     width: 50%;
     align-items: center;
     justify-content: center;
@@ -88,6 +88,8 @@
 }
 
 .upper_box1{
+    width: 30vw;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -198,14 +200,13 @@
 }
 
 .lowerbox{
+    width: 30vw;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* margin-top: 40px; */
-    /* height: 40vh; */
-    /* transform: translateY(50px); */
-    /* text-align: center; */
+    gap: 10px;
 }
 
 .lowerbox2{
@@ -214,6 +215,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    gap: 5px;
     
 }
 
@@ -223,8 +225,10 @@
     flex-shrink: 0;
     align-items: center;
     text-align: center;
+    position: relative;
+    /* top: -10px; */
 
-    margin-top: 250px;
+    margin-top: 5px;
     font-family: Questrial;
     color: #FFF;
     font-weight: 400;
@@ -442,12 +446,12 @@
 
 .sidepart {
     width: 40vw;
-    height: 50vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    
     gap: 48.6px;
 }
 
@@ -536,7 +540,7 @@
 
 .sidepart2 {
     width: 40vw;
-    height: 50vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
