--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -1,5 +1,3 @@
-* {}
-
 .section {
     min-height: 100vh;
     display: flex;
@@ -52,12 +50,9 @@
 
 .heroLandingImage {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
 }
 
 
@@ -239,7 +234,7 @@
     letter-spacing: 0.05em !important;
 }
 
-/*@media only screen and (min-width: 375px) and (max-width:767px){
+@media only screen and (min-width: 375px) and (max-width:767px){
 
     .heroLandingImage {
          object-fit: cover;
@@ -358,7 +353,7 @@
     }
 
    
-    .blogSectionInner{
+    /* .blogSectionInner{
         transform: translateY(60px);
     }
 
@@ -367,7 +362,7 @@
     flex-direction: column;
      height: 75vh;
      transform: translateY(30px);
-}
+} */
 
 .trendingBlog{
     width: 100%;
@@ -485,4 +480,4 @@
 
 }
 
-} */
+} 
