--- a/clientBlogs/src/pages/css/Connect.css
+++ b/clientBlogs/src/pages/css/Connect.css
@@ -49,6 +49,10 @@
     font-weight: 900;
 }
 
+.btn1:hover {
+    cursor: pointer;
+}
+
 .btn2 {
     color: #000000;
     z-index: 2;
@@ -82,12 +86,12 @@
     width: 50%;
     align-items: center;
     justify-content: center;
-    
-    
+
+
     /* height: 125vh; */
 }
 
-.upper_box1{
+.upper_box1 {
     width: 30vw;
     height: 80vh;
     display: flex;
@@ -102,7 +106,7 @@
     height: 142.67px;
     flex-shrink: 0;
     /* align-items: center;*/
-    text-align: center; 
+    text-align: center;
     margin-top: 50px;
     font-family: Questrial;
     color: #FFF;
@@ -164,7 +168,8 @@
     padding: 20px 211px 0px 35px;
     margin-left: 35px;
 }
-.item:hover{
+
+.item:hover {
     cursor: pointer;
 }
 
@@ -199,7 +204,7 @@
 
 }
 
-.lowerbox{
+.lowerbox {
     width: 30vw;
     height: 80vh;
     display: flex;
@@ -209,14 +214,14 @@
     gap: 10px;
 }
 
-.lowerbox2{
+.lowerbox2 {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     gap: 5px;
-    
+
 }
 
 .ch2 {
@@ -451,7 +456,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
     gap: 48.6px;
 }
 
@@ -465,6 +470,7 @@
     width: 95%;
 
 }
+
 .text1 {
     width: 424px;
     height: 43px;
@@ -555,7 +561,7 @@
     .buttons_top {
         flex-direction: column;
 
-    } 
+    }
 
     .btn1,
     .btn2 {
@@ -570,11 +576,12 @@
         /* height: 240vh; */
     }
 
-    .upper_box1{
+    .upper_box1 {
         align-items: center;
         justify-content: center;
         /* text-align: center; */
     }
+
     .ch {
         width: 17hw;
         height: 12vh;
@@ -635,7 +642,7 @@
         height: 50px;
     }
 
-    .lowerbox2{
+    .lowerbox2 {
         width: 80%;
     }
 
@@ -691,7 +698,7 @@
     }
 
     .frame68 {
-  
+
         gap: 5px;
         margin-left: -20px;
         height: 14px;
@@ -699,120 +706,129 @@
         width: 100vw;
 
     }
-    
+
     .line {
         width: 80px;
         height: 0.5px;
     }
-    
+
     .or_continue {
         font-size: 14px;
         font-weight: 500;
- 
+
     }
 
-.frame71 {
+    .frame71 {
 
-    gap: 10px;
-    width: fit-content;
-    /* margin-left: 30px; */
-}
+        gap: 10px;
+        width: fit-content;
+        /* margin-left: 30px; */
+    }
 
-.frame69 {
-    width: 40vw;
-    height: 40px;
-    padding: 5px 50.8px 5.8px 40px;
-    margin-left: -5px;
-}
+    .frame69 {
+        width: 40vw;
+        height: 40px;
+        padding: 5px 50.8px 5.8px 40px;
+        margin-left: -5px;
+    }
 
-.google_logo {
-    width: 15.2px;
-    height: 15.2px;
-    margin-left: -10px;
-}
+    .google_logo {
+        width: 15.2px;
+        height: 15.2px;
+        margin-left: -10px;
+    }
 
-.frame70 {
-    width: 40vw;
-    padding: 5px 50.8px 5.8px 60px;
-}
-.insta_logo {
-    width: 15px;
-    height: 15px;
-    margin-left: -50px;
+    .frame70 {
+        width: 40vw;
+        padding: 5px 50.8px 5.8px 60px;
+    }
 
-}
+    .insta_logo {
+        width: 15px;
+        height: 15px;
+        margin-left: -50px;
 
-
-.box2 {
-    /* padding: 190px 107.52px 205.56px 107.55px; */
-    flex-direction: column;
-    gap: 451.9px;
-    background: #383838;
-    width: 100vw;
-    margin-top: 100px;
-    padding: 0;
-}
-
-.sidepart {
-    width: 80%;
-    flex-wrap: wrap;
-}
+    }
 
 
+    .box2 {
+        /* padding: 190px 107.52px 205.56px 107.55px; */
+        flex-direction: column;
+        gap: 451.9px;
+        background: #383838;
+        width: 100vw;
+        margin-top: 100px;
+        padding: 0;
+    }
 
-.h1,
-.h2,
-.h3 {
-    /* display: flex; */
-    gap: 10px;
-    flex-direction: row;
-    /* align-items: flex-start; */
-    /* width: 40vw; */
-    max-width: 80vw;
-    word-wrap: break-word;
-
-}
-.logo1 ,.logo2 ,.logo3{
-width: 28px;
-height: 28px;
-}
-
-.side_text{
-    display: flex;
-    flex-direction: column;
-
-    width:80%;
-    gap:15px;
-}
-.text1 ,.text3,.text5 {
-    font-size: 20px;
-    font-weight: 500;
-    width:auto;
-    /* display: none; */
-    /* width: 10px; */
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* word-wrap: break-word; */
-    /* width: 1; */
-
-}
-
-.text2,.text4,.text6{
-    font-size: 20px;
-    font-weight: 300;
-    letter-spacing: 0.9px;
-    width: auto;
-    /* width: 10px; */
-    /* display: none; */
-
-    /* width: 10vw; */
-    word-wrap: break-word;
-}
+    .sidepart {
+        width: 80%;
+        flex-wrap: wrap;
+    }
 
 
-.sidepart2{
-    display: none;
-}
+
+    .h1,
+    .h2,
+    .h3 {
+        /* display: flex; */
+        gap: 10px;
+        flex-direction: row;
+        /* align-items: flex-start; */
+        /* width: 40vw; */
+        max-width: 80vw;
+        word-wrap: break-word;
+
+    }
+
+    .logo1,
+    .logo2,
+    .logo3 {
+        width: 28px;
+        height: 28px;
+    }
+
+    .side_text {
+        display: flex;
+        flex-direction: column;
+
+        width: 80%;
+        gap: 15px;
+    }
+
+    .text1,
+    .text3,
+    .text5 {
+        font-size: 20px;
+        font-weight: 500;
+        width: auto;
+        /* display: none; */
+        /* width: 10px; */
+        /* display: flex; */
+        /* flex-wrap: wrap; */
+        /* word-wrap: break-word; */
+        /* width: 1; */
+
+    }
+
+    .text2,
+    .text4,
+    .text6 {
+        font-size: 20px;
+        font-weight: 300;
+        letter-spacing: 0.9px;
+        width: auto;
+        /* width: 10px; */
+        /* display: none; */
+
+        /* width: 10vw; */
+        word-wrap: break-word;
+    }
+
+
+    .sidepart2 {
+        display: none;
+    }
 
 
 
@@ -838,260 +854,260 @@ height: 28px;
         border: 1.045px solid #414141;
         background: #2F2F2F;
         color: #FFF;
-    
+
     }
 
 
-.item {
-    position: relative;
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 1px;
-    width: 445px;
-    height: 62px;
-    padding: 20px 211px 0px 35px;
-    /* margin-left: 35px; */
+    .item {
+        position: relative;
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 1px;
+        width: 445px;
+        height: 62px;
+        padding: 20px 211px 0px 35px;
+        /* margin-left: 35px; */
 
-}
+    }
 
-.addline {
-    width: 445.01px;
-    height: 0.25px;
-    background: #C6C6C6;
-    /* z-index: -1; */
-}
+    .addline {
+        width: 445.01px;
+        height: 0.25px;
+        background: #C6C6C6;
+        /* z-index: -1; */
+    }
 
-.cont {
+    .cont {
 
-    margin-left: 0px;
-    margin-top: 20px;
-    display: flex;
-    width: 445px;
-    height: 61px;
-    padding: 10px 0px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 8px;
-    background: #2F2F2F;
-    color: #FFF;
-    text-align: justify;
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 1px;
-}
+        margin-left: 0px;
+        margin-top: 20px;
+        display: flex;
+        width: 445px;
+        height: 61px;
+        padding: 10px 0px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 8px;
+        background: #2F2F2F;
+        color: #FFF;
+        text-align: justify;
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 1px;
+    }
 
-.pink {
-    color: #F74D79;
-    font-family: Roboto;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 1.6px;
-    margin-left: 0px;
-    margin-top: 5px;
-    width: fit-content;
+    .pink {
+        color: #F74D79;
+        font-family: Roboto;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 1.6px;
+        margin-left: 0px;
+        margin-top: 5px;
+        width: fit-content;
 
-}
+    }
 
-.connect {
-    color: #F74D79;
-    font-family: Roboto;
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 1.6px;
-    height: 38px;
-    margin-left: 0px;
+    .connect {
+        color: #F74D79;
+        font-family: Roboto;
+        font-size: 35px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 1.6px;
+        height: 38px;
+        margin-left: 0px;
 
-}
-
-
-.frame65 {
-    display: flex;
-    width: 445px;
-    padding: 18px 26px 24px 26px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8.36px;
-    border: 1.045px solid #414141;
-    background: #2F2F2F;
-    margin-left: 0px;
-    margin-top: 15px;
-}
-
-.text {
-    width: 393px;
-    height: 64px;
-    color: #A0A0A0;
-    text-align: justify;
-    font-family: Questrial;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 19px;
-    letter-spacing: 0.96px;
-
-}
-
-.frame67 input {
-    display: flex;
-    width: 445px;
-    height: 61px;
-
-    padding: 10px 0px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    background: #2F2F2F;
-    margin-left: 0px;
-    margin-top: 20px;
-
-    color: #6B6B6B;
-    border: 1.045px solid #414141;
-    text-align: justify;
-    border-radius: 8px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-
-::placeholder {
-    text-align: center;
-}
-
-.frame66 {
-    display: flex;
-    width: 445px;
-    height: 61px;
-    padding: 10px 0px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 8px;
-    background: #F74D79;
-    margin-left: 0px;
-    margin-top: 20px;
-
-    color: #FFF;
-    text-align: justify;
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 1px;
-}
+    }
 
 
-.frame68 {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
-    margin-left: 0px;
-    width: 418px;
-    height: 16px;
-    margin-top: 25px;
-}
+    .frame65 {
+        display: flex;
+        width: 445px;
+        padding: 18px 26px 24px 26px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 8.36px;
+        border: 1.045px solid #414141;
+        background: #2F2F2F;
+        margin-left: 0px;
+        margin-top: 15px;
+    }
 
-.line {
-    width: 147.014px;
-    height: 0.5px;
-    background: #9F9F9F;
-}
+    .text {
+        width: 393px;
+        height: 64px;
+        color: #A0A0A0;
+        text-align: justify;
+        font-family: Questrial;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 19px;
+        letter-spacing: 0.96px;
 
-.or_continue {
-    color: #9F9F9F;
-    text-align: justify;
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.7px;
-    margin-left: 0px;
-}
+    }
 
-.frame71 {
-    display: inline-flex;
-    align-items: flex-start;
-    gap: 18px;
-    width: 446px;
-    height: 40px;
-    margin-left: 0px;
-    margin-top: 25px;
-}
+    .frame67 input {
+        display: flex;
+        width: 445px;
+        height: 61px;
 
-.frame69 {
-    display: flex;
-    gap: 12px;
-    width: 214px;
-    height: 40px;
-    padding: 10px 67.8px 10.8px 59px;
-    align-items: center;
-    border-radius: 8.36px;
-    border: 1.045px solid #414141;
-    background: #2F2F2F;
+        padding: 10px 0px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        background: #2F2F2F;
+        margin-left: 0px;
+        margin-top: 20px;
 
-    color: #6B6B6B;
-    text-align: justify;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    letter-spacing: 0.8px;
-    margin-left: 0px;
+        color: #6B6B6B;
+        border: 1.045px solid #414141;
+        text-align: justify;
+        border-radius: 8px;
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        letter-spacing: 1px;
+    }
 
-}
+    ::placeholder {
+        text-align: center;
+    }
 
-.google_logo {
-    width: 19.2px;
-    height: 19.2px;
-}
+    .frame66 {
+        display: flex;
+        width: 445px;
+        height: 61px;
+        padding: 10px 0px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 8px;
+        background: #F74D79;
+        margin-left: 0px;
+        margin-top: 20px;
+
+        color: #FFF;
+        text-align: justify;
+        font-family: Roboto;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: 1px;
+    }
+
+
+    .frame68 {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        gap: 6px;
+        margin-left: 0px;
+        width: 418px;
+        height: 16px;
+        margin-top: 25px;
+    }
+
+    .line {
+        width: 147.014px;
+        height: 0.5px;
+        background: #9F9F9F;
+    }
+
+    .or_continue {
+        color: #9F9F9F;
+        text-align: justify;
+        font-family: Roboto;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: 0.7px;
+        margin-left: 0px;
+    }
+
+    .frame71 {
+        display: inline-flex;
+        align-items: flex-start;
+        gap: 18px;
+        width: 446px;
+        height: 40px;
+        margin-left: 0px;
+        margin-top: 25px;
+    }
+
+    .frame69 {
+        display: flex;
+        gap: 12px;
+        width: 214px;
+        height: 40px;
+        padding: 10px 67.8px 10.8px 59px;
+        align-items: center;
+        border-radius: 8.36px;
+        border: 1.045px solid #414141;
+        background: #2F2F2F;
+
+        color: #6B6B6B;
+        text-align: justify;
+        font-family: Roboto;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
+        letter-spacing: 0.8px;
+        margin-left: 0px;
+
+    }
+
+    .google_logo {
+        width: 19.2px;
+        height: 19.2px;
+    }
 
 
 
-.frame70 {
-    display: flex;
-    width: 214px;
-    height: 40px;
-    gap: 12px;
-    padding: 10.5px 49px 10.5px 89px;
-    align-items: center;
-    background-color: #F74D79;
-    border-radius: 8.36px;
-    border: 1.045px solid #414141;
+    .frame70 {
+        display: flex;
+        width: 214px;
+        height: 40px;
+        gap: 12px;
+        padding: 10.5px 49px 10.5px 89px;
+        align-items: center;
+        background-color: #F74D79;
+        border-radius: 8.36px;
+        border: 1.045px solid #414141;
 
-    color: #FFF;
-    text-align: justify;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: normal;
-    letter-spacing: 0.8px;
-    align-items: center;
+        color: #FFF;
+        text-align: justify;
+        font-family: Roboto;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: normal;
+        letter-spacing: 0.8px;
+        align-items: center;
 
-}
+    }
 
-.insta_logo {
-    width: 20px;
-    height: 20px;
-    margin-left: -50px;
+    .insta_logo {
+        width: 20px;
+        height: 20px;
+        margin-left: -50px;
 
-}
+    }
 
 
 
