fix: footer issue solved

--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -98,7 +98,7 @@
         height: 100vh;
         width: 100vhS;
      
-        transform: translatey(70px);
+        /* transform: translatey(70px); */
         padding-top: 0rem;
         padding-left: 0rem;
     
