--- a/clientBlogs/src/pages/css/CommuneWelcome.css
+++ b/clientBlogs/src/pages/css/CommuneWelcome.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    padding:0px 10%;
+    padding: 0px 10%;
     margin-top: 50px;
 }
 
@@ -40,7 +40,9 @@
     border-radius: 50%;
     border: 5px solid #2F2F2F;
     background-color: #2F2F2F;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .settingCotainer .greyBox .imageContainer .name {
@@ -68,8 +70,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    margin:20px 0px;
-    gap:20px;
+    margin: 20px 0px;
+    gap: 20px;
 }
 
 .settingCotainer .greyBox .detailsContainer .top .title {
@@ -89,8 +91,8 @@
     align-items: center;
     justify-content: space-between;
     gap: 100px;
-    margin:20px 0px;
-    gap:20px;
+    margin: 20px 0px;
+    gap: 20px;
 }
 
 .settingCotainer .greyBox .detailsContainer .mid .btn1 {
@@ -122,7 +124,7 @@
 .settingCotainer .greyBox .detailsContainer .bottom {
     height: auto;
     text-align: center;
-    margin:20px 0px;
+    margin: 20px 0px;
     font-size: 15px;
     color: #FFFFFF;
 }
