--- a/clientBlogs/src/pages/css/IndividualBlogs.css
+++ b/clientBlogs/src/pages/css/IndividualBlogs.css
@@ -185,6 +185,7 @@
 
 .reactSection .upvote {
     margin: 5px;
+    margin-right:0px;
     font-size: 16px;
     position: relative;
     bottom: -2px;
