--- a/clientBlogs/src/pages/css/Setting.css
+++ b/clientBlogs/src/pages/css/Setting.css
@@ -56,17 +56,20 @@
   /* align-items: center; */
   /* justify-content: center; */
 }
-.section1 .editBanner{
+
+.section1 .editBanner {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   /* border: 1px solid white; */
 }
-.section1 .editBanner .edit{
- color: white;
- margin: auto 0px;
- background-color: #232426;
- cursor:pointer
+
+.section1 .editBanner .edit {
+  color: white;
+  margin: auto 0px;
+  background-color: #232426;
+  cursor: pointer
 }
+
 .section1 .right_form {
   display: flex;
   flex-direction: column;
@@ -83,10 +86,28 @@
   background-color: #3e3e3e;
   border: 1px solid #5e5e5e;
   border-radius: 50%;
-  font-size: 18px;
+  font-size: 0px;
+  cursor: pointer;
 }
 
-.inputBox_profile::placeholder {
+.custom-file-upload {
+  height: 150px;
+  width: 150px;
+  margin: 15px 0px;
+  background-color: #3e3e3e;
+  border: 1px solid #5e5e5e;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+
   color: #f74d79;
   font-family: Roboto;
   font-size: 20.75px;
@@ -94,6 +115,11 @@
   font-weight: 900;
   line-height: normal;
   letter-spacing: 1.238px;
+
+}
+
+.custom-file-upload:hover {
+  background-color: #4e4e4e;
 }
 
 .section1 .inputBox {
@@ -121,7 +147,7 @@
   height: fit-content;
   padding: 30px;
   margin-top: 10px;
-   /* align-items: center;  
+  /* align-items: center;  
    justify-content: center; */
 
 }
