fix:connect page responsive

--- a/clientBlogs/src/components/css/HorzBlogCard.css
+++ b/clientBlogs/src/components/css/HorzBlogCard.css
@@ -95,6 +95,10 @@
 
 @media only screen and (min-width: 375px) and (max-width:767px){
 
+    #cardContainer{
+        margin:0px;
+    }
+
     #cardContainer .blogDetails>div {
         padding-left: 16px;
         display: flex;
