--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -216,7 +216,7 @@
     color: rgba(247, 77, 121, 1) !important;
     font-size: 41px !important;
     font-family: "Questrial" !important;
-    font-weight: 400 !important;
+    font-weight: 400 ;
     line-height: 42px !important;
     letter-spacing: 0.05em !important;
 
@@ -246,7 +246,7 @@
     }
     .carouselSection {
         min-height: 100vh;
-        width: 90%;
+        width: 100vw;
     }
     
      .carouselContentContainer {
@@ -256,9 +256,9 @@
     }
     
     .carouselSection .carouselContentBtn {
-        font-size: 18px;
-        min-width: 20%;
-        height: 20%;
+        font-size: 16px;
+        width: 70vw;
+        height: 4vh;
         line-height: 29px;
     
     }
@@ -277,11 +277,15 @@
     .whoAreWeContainer {
         display: flex;
         flex-direction: column;
+        gap: 20px;
         max-height: 100vh;
         transform: translateY(40px);
         width: 100%;
     }
     
+    .whoAreWeContainer .imagePanel{
+        padding: 20px;
+    }
     .whoAreWeContainer .contentPanel {
         width: 80%;
         justify-content: center;
@@ -354,6 +358,24 @@
     }
 .blogSection{
     max-width: 100vw;
+    min-height: 100vh;
+ 
+    /* overflow: hidden; */
+}
+
+.blogHeadings{
+
+    gap: 5px;
+}
+
+.trendingBlogsText{
+    font-size: 31px !important;
+    font-weight: 200;
+}
+.moreText{
+    font-size: 35px !important;
+    padding: 10px;
+    font-weight: 300 !important;
 }
 
 .blogsBox{
@@ -368,7 +390,9 @@
     display: none;
 }
 
+
 .horzBlogsOuter{
+    /* display: none; */
     width: 100%;
     /* height: fit-content; */
 
@@ -379,6 +403,15 @@
     height: 50vh;
 }
 
+.connect_footer{
+    max-width: 100vw;
+    min-height: fit-content;
+}
+
+.home_footer{
+    min-width: 100vw;
+    min-height: max-content;
+}
 
 
 }
