--- a/clientBlogs/src/components/css/Footer.css
+++ b/clientBlogs/src/components/css/Footer.css
@@ -92,30 +92,31 @@
     width: 40%;
 }
 
-@media only screen and (min-width:375px) and (max-width:767px){
-    
+@media only screen and (max-width:767px) {
+
     .footerContainer {
-        height: 100vh;
-        width: 100vhS;
-     
+        min-height: 100vh;
+        height: auto;
+        min-width: 100vw;
+
         /* transform: translatey(70px); */
         padding-top: 0rem;
         padding-left: 0rem;
-    
+
     }
 
     .footerContainer .logo {
- 
+
         width: 100%;
-            text-align: center;
+        text-align: center;
         justify-content: center;
         align-items: center;
         margin: auto;
         transform: translatey(10px);
-        
-    
+
+
     }
-    
+
     .footerContainer .contentOuter {
         width: 80%;
         margin: auto;
@@ -125,87 +126,88 @@
         text-align: center;
         justify-content: center;
         align-items: center;
-        
-   
+
+
     }
 
     .footerContainer .contentPartOne {
         font-weight: 500;
         font-size: 16px;
-    
+
     }
-    
+
     .footerContainer .contentPartTwo {
         font-weight: 400;
         font-size: 16px;
-    
+
     }
 
     .footerContainer .row2 {
         display: flex;
         flex-direction: column;
         gap: 40px;
-   
+
     }
 
-    .footerContainer  .pages {
-    
+    .footerContainer .pages {
+
         width: 80%;
         /* margin: auto; */
         margin-left: 50px;
-         position: relative;
+        position: relative;
         top: -25px;
-     
+
+    }
+
+
+    .footerContainer .row2 .pageLinks {
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 20px;
+
+        line-height: 15px;
+
+    }
+
+    .footerContainer .socialmedia {
+
+        width: 80%;
+        /* margin: auto; */
+        position: relative;
+        top: -25px;
+        margin-left: 50px;
+        /* border-bottom: 2px solid white; */
+    }
+
+    .footerContainer .row2 .socialMedia {
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: 20px;
+        line-height: 15px;
+    }
+
+    .footerContainer .row2 .contactus {
+        font-size: 20px;
+        font-weight: 500;
+
+        margin-bottom: 30px;
+        line-height: 15px;
+    }
+
+
+    .footerContainer .contact {
+
+        width: 80%;
+        /* margin: auto; */
+        position: relative;
+        top: -25px;
+        margin-left: 50px;
+
+    }
+
 }
 
-
-.footerContainer .row2 .pageLinks {
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    
-    line-height: 15px;
-
-}
-
-.footerContainer .socialmedia {
- 
-    width: 80%;
-    /* margin: auto; */
-     position: relative;
-    top: -25px;
-    margin-left: 50px;
-    /* border-bottom: 2px solid white; */
-}
-.footerContainer .row2 .socialMedia {
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 20px;
-    line-height: 15px;
-}
-
-.footerContainer .row2 .contactus {
-    font-size: 20px;
-    font-weight: 500;
-    
-    margin-bottom: 30px;
-    line-height: 15px;
-}
-
-
-.footerContainer .contact {
- 
-    width: 80%;
-    /* margin: auto; */
-     position: relative;
-    top: -25px;
-    margin-left: 50px;
-
-}
-
-}
-
-@media only screen and (min-width:768) and (max-width:1024){
+@media only screen and (min-width:768) and (max-width:1024) {
 
 
     .footerContainer {
@@ -217,16 +219,17 @@
         width: 100vh;
         /* display: none !important; */
     }
-.footerContainer .row2 {
-    display: flex;
-    /* flex-direction: column; */
-    gap: 50px;
-    height: 100vh;
-    width: 100vh;
-    padding-bottom: 0rem;
-    padding-top: 0px;
-    margin: auto;
-    transform: translateY(40px);
-}
+
+    .footerContainer .row2 {
+        display: flex;
+        /* flex-direction: column; */
+        gap: 50px;
+        height: 100vh;
+        width: 100vh;
+        padding-bottom: 0rem;
+        padding-top: 0px;
+        margin: auto;
+        transform: translateY(40px);
+    }
 
 }
