--- a/clientBlogs/src/pages/css/Home.css
+++ b/clientBlogs/src/pages/css/Home.css
@@ -176,7 +176,7 @@
 .whoAreWeContainer .imagePanel>img {
     object-fit: cover;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .welcomeSection {
@@ -235,7 +235,7 @@
     letter-spacing: 0.05em !important;
 }
 
-@media only screen and (min-width: 375px) and (max-width:767px){
+@media only screen and (min-width: 320px) and (max-width:767px){
 
     .heroLandingImage {
          object-fit: cover;
@@ -282,10 +282,8 @@
         transform: translateY(40px);
         width: 100%;
     }
-    
-    .whoAreWeContainer .imagePanel{
-        padding: 20px;
-    }
+
+
     .whoAreWeContainer .contentPanel {
         width: 80%;
         justify-content: center;
@@ -295,39 +293,36 @@
     }
     
     .whoAreWeContainer .contentPanel>h2 {
-     
+        
         margin-bottom: 0px;
         font-weight: 400;
-        font-size: 35px;
+        font-size: 25px;
         padding: 10px;
         
-      }
+    }
     
     .whoAreWeContainer .contentPanel>detail {
-            width: 70%;
-            height: fit-content;
-            margin-left: 20px;
-             padding-top: 50px; 
-  
-            font-size: 18px;
-            line-height: 25px;
-    
+        width: 70%;
+        height: fit-content;
+        margin-left: 20px;
+        padding-top: 50px; 
+        
+        font-size: 18px;
+        line-height: 25px;
+        
     }
     
     .whoAreWeContainer .imagePanel {
         width: 100%;
-        height: fit-content
+        height: fit-content;
+        padding: 20px;
      
-    }
-    .imagePanel{
-        width: 80vh;
-        height: 40vh;
     }
     
     .whoAreWeContainer .imagePanel>img {
         object-fit: cover;
         width: 100%;
-           height: 50vh;
+           height: 35vh;
            margin-bottom: 35px;
     }
 
